#-------------------------------------------------------------------------------
# Toolkit
#-------------------------------------------------------------------------------

fips_ide_group(toolkit)
fips_include_directories(${CMAKE_CURRENT_SOURCE_DIR})
    IF(NOT N_BUILD_FIRSTTIME)
    #fips_add_subdirectory(archiver3)
    #fips_add_subdirectory(audiobatcher3)
    #fips_add_subdirectory(gamebatcher)
    #fips_add_subdirectory(modelbatcher3)
    fips_add_subdirectory(fbxbatcher3)
    fips_add_subdirectory(textool)
    #fips_add_subdirectory(levelviewer)
	IF(NOT N_MINIMAL_TOOLKIT)
        fips_add_subdirectory(texturebatcher3)
    ENDIF()
    #fips_add_subdirectory(assetbatcher)
    #fips_add_subdirectory(raytrace)
    #add_subdirectory(toolkitutil)
    #fips_add_subdirectory(editorfeatures)
    IF(MSVC)
    #fips_add_subdirectory(setup)
    ENDIF()
    fips_add_subdirectory(shaderbatcher)
    ENDIF()

    fips_add_subdirectory(editor)
    fips_add_subdirectory(toolkitutil)
    fips_add_subdirectory(toolkit-common)
    fips_add_subdirectory(shaderc)
    fips_add_subdirectory(assetbatcher)
    fips_add_subdirectory(assetc)
